@@ -58,6 +58,7 @@ Majors changes:
 
 Minors changes:
 - Add Czech and Slovak translations.
+- Add multiple CPUs usage.
  
 Bug fixes:
 
